nenolod     2005/09/29 18:37:16 UTC	(20050929-2449)
  Log:
  - Add atheme.verify_account for account activity verification.
  

  Modified:
	trunk/modules/xmlrpc/Makefile.in (File Modified) 
	trunk/modules/xmlrpc/account.c (File Modified) 


nenolod     2005/09/29 05:29:24 UTC	(20050929-2447)
  Log:
  - Don't allow users to register their UID as a nick.
  - Remove unused node_t *n (reported by Trystan.)
  

  Modified:
	trunk/modules/nickserv/register.c (File Modified) 
	trunk/modules/operserv/uptime.c (File Modified) 
	trunk/src/.indent.pro (File Modified) 


jilles      2005/09/29 01:21:15 UTC	(20050929-2445)
  Log:
  Avoid quit_sts() crashes on SIGINT and SIGUSR1 as well.
  

  Modified:
	trunk/src/signal.c (File Modified) 


jilles      2005/09/28 22:42:46 UTC	(20050928-2443)
  Log:
  Fix crash on shutdown if a connection with ircd was never established.
  

  Modified:
	trunk/src/atheme.c (File Modified) 


nenolod     2005/09/28 21:45:50 UTC	(20050928-2441)
  Log:
  - fix a bug in test.method (echoserver.)
  

  Modified:
	trunk/modules/xmlrpc/main.c (File Modified) 


nenolod     2005/09/28 18:25:05 UTC	(20050928-2439)
  Log:
  - Enable $Id$ stuff on xmlrpc.c, base64.c.
  - Fix echoserver method.
  - Add atheme.register_account (which works), and atheme.verify_account (/ns verify equivilant, not implemented yet.)
  

  Modified:
	trunk/modules/xmlrpc/account.c (File Added) 
	trunk/modules/xmlrpc/main.c (File Modified) 
	trunk/src/base64.c  (Property Modified)
	trunk/src/xmlrpc.c  (Property Modified)


alambert    2005/09/28 06:27:03 UTC	(20050928-2437)
  Log:
  back out 2345...the one time I don't test and I screw it up :-) types don't match, will play tomorrow

  Modified:
	trunk/src/xmlrpc.c (File Modified) 


alambert    2005/09/28 06:21:50 UTC	(20050928-2435)
  Log:
  be sure to encode XMLRPC error reasons -- they're strings, after all

  Modified:
	trunk/src/xmlrpc.c (File Modified) 


nenolod     2005/09/28 06:14:07 UTC	(20050928-2433)
  Log: